test/should_fail/cast2.fluffy
export main
func main() : int:
	var l : void*
	var l2 : unsigned byte* = l
	return 0
